[docs] documentation updated

--- a/docs/2018-12-17-icd11.ipynb
+++ b/docs/2018-12-17-icd11.ipynb
@@ -28,15 +28,15 @@
     "\n",
     "ED1E.EE\n",
     "\n",
-    "E corresponds to a ‘base 34 number’ (0-9 and A-Z; excluding O, I);\n",
-    "D corresponds to ‘base 24 number’ (A-Z; excluding O, I); and\n",
-    "1 corresponds to the ‘base 10 integers’ (0-9)\n",
-    "The first E starts with ‘1’ and is allocated for the chapter. (i.e. 1 is for the first chapter, 2: chapter 2, … A chapter 10, etc.)\n",
-    "The terminal letter Y is reserved for the residual category ‘other specified’ and the terminal letter ‘Z’ is reserved for the residual category ‘unspecified’. For the chapters that have more than 240 blocks, ‘F’ (‘other specified’) and ‘G’ (‘unspecified’) are also used to indicate residual categories (due to problems with the coding space).\n",
+    "- E corresponds to a ‘base 34 number’ (0-9 and A-Z; excluding O, I);\n",
+    "- D corresponds to ‘base 24 number’ (A-Z; excluding O, I); and\n",
+    "- 1 corresponds to the ‘base 10 integers’ (0-9)\n",
+    "- The first E starts with ‘1’ and is allocated for the chapter. (i.e. 1 is for the first chapter, 2: chapter 2, … A chapter 10, etc.)\n",
+    "- The terminal letter Y is reserved for the residual category ‘other specified’ and the terminal letter ‘Z’ is reserved for the residual category ‘unspecified’. For the chapters that have more than 240 blocks, ‘F’ (‘other specified’) and ‘G’ (‘unspecified’) are also used to indicate residual categories (due to problems with the coding space).\n",
     "\n",
-    "Chapters are indicated by the first character. For example, 1A00 is a code in chapter 1, and BA00 is a code in chapter 11.\n",
+    "- Chapters are indicated by the first character. For example, 1A00 is a code in chapter 1, and BA00 is a code in chapter 11.\n",
     "\n",
-    "Blocks are not coded within this code structure – each has its own. However, hierarchical relations are retained in the 4-digit codes. There is unused coding space allocated in all blocks to allow for later updates and to keep the codes stable."
+    "- Blocks are not coded within this code structure – each has its own. However, hierarchical relations are retained in the 4-digit codes. There is unused coding space allocated in all blocks to allow for later updates and to keep the codes stable."
    ]
   },
   {
@@ -56,7 +56,13 @@
     "\n",
     "- https://icd.who.int/dev11/l-m/en\n",
     "\n",
-    "- https://icd.who.int/dev11/content/refguide.ICD11_en/html/index.html"
+    "- https://icd.who.int/dev11/content/refguide.ICD11_en/html/index.html\n",
+    "\n",
+    "- https://www.icd10monitor.com/icd-11-is-coming-take-time-to-adjust\n",
+    "\n",
+    "- https://www.beckershospitalreview.com/finance/icd-10-or-icd-11-the-dilemma-behind-both-coding-systems.html\n",
+    "\n",
+    "- https://icd.who.int/icdapi/docs/APIdoc.html"
    ]
   },
   {
